# timebombs

./: .gitignore  .golangci.yml  .goreleaser.yml  .tmux-session  CLAUDE.md  LICENSE  Makefile  README.md  action.yml  go.mod  go.sum  install.sh  license.md  mkdocs.yml  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: ci.yml  python-package.yml  release.yml
cmd/timebombs/: main.go  main_test.go
docs/: CHANGELOG.md  continuous-integration.md  features.md  index.md  timebomb.psd
internal/initcmd/: install.go  install_test.go
internal/initcmd/templates/: shared.md  skill.md
internal/initcmd/templates/ci/: github-actions.yml
internal/initcmd/templates/claude-code/: planting.md  scanning.md
internal/model/: timebomb.go  timebomb_test.go
internal/output/: json.go  json_test.go  sarif.go  sarif_test.go  text.go  text_test.go
internal/scanner/: fixtures_test.go  git.go  git_test.go  parser.go  parser_test.go  scanner.go  scanner_test.go
internal/upgrade/: upgrade.go  upgrade_test.go
src/timebombs/: __init__.py  __main__.py
testdata/go/: sample.go
testdata/mixed/: many.py  no_bombs.txt
testdata/python/: sample.py
testdata/ruby/: sample.rb
testdata/sql/: sample.sql
testdata/typescript/: sample.ts
tests/: __init__.py  test_timebombs.py
