[tool.poetry]
name = "timebombs"
version = "0.1.0"
description = "A small package to keep tech debt to a minimum."
authors = ["Matteo Merola"]
readme = "README.md"
homepage = "https://github.com/mattmezza/timebombs"
repository = "https://github.com/mattmezza/timebombs"
documentation = "https://matteo.merola.co/timebombs"
keywords = ["CI", "continuous integration", "tech debt"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License"
]
include = ["CHANGELOG.md", "README.md"]
packages = [
    { include = "timebombs", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typer = "^0.12.3"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^24.4.2"
flake8 = "^7.0"
freezegun = "^1.5.1"
isort = "^5.13.2"
markdown-include = "^0.8.1"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.24"
mypy = "^1.10.0"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
sphinx = "^7.3.7"
sphinx-autodoc-typehints = "^2.1.0"
wheel = "^0.43.0"

[tool.poetry.scripts]
timebombs = "timebombs:__main__"

[tool.black]
line-length = 79
include ='\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.hg
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
# compatibility with black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    '\.\.\.',
    'if __name__ == "__main__":',
]

[tool.coverage.html]
directory = './coverage'

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "timebombs.*"
disallow_untyped_defs = false
strict = true

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
